# python-robot

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements-lock.txt
demos/: 01_frame_transformations.ipynb  02_forward_kinematics.ipynb  03_motion_schemes.ipynb  motion_schemes_demo.ipynb
demos/04_UR3_motion_planning/: ur3_01.ipynb  ur3_setup.py  ur3_swiftsim.py
src/python_robot/: __init__.py
src/python_robot/base/: __init__.py  dynamics.py  frame.py  transformation.py  types.py  vector.py
src/python_robot/charts/: __init__.py  composite_charts.py
src/python_robot/charts/matplotlibwrapper/: __init__.py  axes.py  chart_2D.py
src/python_robot/manipulator/: __init__.py  exceptions.py  kinematic_chain.py  manipulator.py  urdf.py  visualisation.py
src/python_robot/manipulator/links/: __init__.py  link.py
src/python_robot/models/: __init__.py  planar3R.py  xyz_gantry.py
src/python_robot/motion/: __init__.py  cartesian.py
src/python_robot/motion/cartesian_space/: __init__.py  trajectory.py
src/python_robot/motion/joint_space/: __init__.py  trajectory.py
src/python_robot/motion/planning/: __init__.py  cartesian_multi.py  cartesian_single.py  joint_multi.py  schemes.py
src/python_robot/motion/profiles_1D/: __init__.py
src/python_robot/motion/profiles_6D/: __init__.py  _profile_abc.py  parabolic_blend.py
src/python_robot/utils/: __init__.py  introspection.py  math.py  table.py
src/python_robot/visualisation/: __init__.py  animation.py  artists.py  scene.py
src/python_robot/visualisation/core/: __init__.py  animation.py  artists.py  (+1 more)
(+33 files in other folders)
