[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-robot"
version = "0.1.0"
description = "package about robotics"
readme = "README.md"
requires-python = ">=3.10,<3.13"

authors = [
  { name = "Tom Christiaens" }
]

license = { text = "MIT" }

keywords = []

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "automation-motion==0.1.0",
  "websockets==13.1",
  "numpy==1.26.4",
  "ansitable==0.11.5",
  "matplotlib==3.7.5",
  "rvc3python",
  "pyvista[all]",
  "jupyterlab",
  "jinja2",
  "typeguard",
]

[tool.setuptools]
package-dir = {"" = "src"}
